# KSGO

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.038F5B577CF0F099.idx
include/: Constants.hpp  DynamicEntity.hpp  Networking.hpp  Player.hpp  StaticEntity.hpp  Weapon.hpp  button.hpp  client.hpp  components.hpp  constants.hpp  map.hpp  network.hpp  networking.hpp  scenes.hpp  server.hpp
src/: DynamicEntity.cpp  Main.cpp  Networking.cpp  Player.cpp  StaticEntity.cpp  Weapon.cpp  button.cpp  client.cpp  components.cpp  main.cpp  map.cpp  network.cpp  networking.cpp  networking.h  scenes.cpp  server.cpp
